--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "browser-sync": "^2.14.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-changed": "^1.3.1",
     "gulp-clean-css": "^2.0.6",
     "gulp-header": "^1.8.2",
     "gulp-load-plugins": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
+    "gulp-sftp": "^0.1.5",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
     "vinyl-ftp": "^0.4.5"
   },
